--- a/social-media-banner/index.htm
+++ b/social-media-banner/index.htm
@@ -1014,7 +1014,7 @@ span.wpcf7-list-item {
 				<div class="elementor-element elementor-element-f9fa430 elementor-widget elementor-widget-image" data-id="f9fa430" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-image">
-                    <a itemprop="url" href="https://dailygktrick.com/mantra-solution/">
+                    <a itemprop="url" href="https://bhadreshvariya.github.io/mantra-solution/">
 										<img width="2056" height="466" src="../assets/logo.webp" class="attachment-full size-full" alt="">	
                                         </a>
                                         
