--- a/index.htm
+++ b/index.htm
@@ -1996,7 +1996,15 @@ var wc_cart_fragments_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax
 <script type='text/javascript' src='wp-content\plugins\elementor\assets\lib\waypoints\waypoints.min.js?ver=4.0.2'></script>
 <script type='text/javascript' src='wp-content\plugins\visual-portfolio\assets\vendor\swiper\js\swiper.min.js?ver=5.0.4'></script>
 <script type='text/javascript' src='wp-content\plugins\elementor\assets\lib\share-link\share-link.min.js?ver=2.9.13'></script>
+<script type="text/javascript">
+    const images = document.getElementsByTagName('img');
+for (let i = 0; i < images.length; i++) {
+    images[i].addEventListener('contextmenu', event => event.preventDefault());
+}
+</script>
+
 <script type='text/javascript'>
+
 var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false},"i18n":{"shareOnFacebook":"Share on Facebook","shareOnTwitter":"Share on Twitter","pinIt":"Pin it","downloadImage":"Download image"},"is_rtl":false,"breakpoints":{"xs":0,"sm":480,"md":768,"lg":1025,"xl":1440,"xxl":1600},"version":"2.9.13","urls":{"assets":"https:\/\/forzon.net\/wp-content\/plugins\/elementor\/assets\/"},"settings":{"page":[],"general":{"elementor_global_image_lightbox":"yes","elementor_lightbox_enable_counter":"yes","elementor_lightbox_enable_fullscreen":"yes","elementor_lightbox_enable_zoom":"yes","elementor_lightbox_enable_share":"yes","elementor_lightbox_title_src":"title","elementor_lightbox_description_src":"description"},"editorPreferences":[]},"post":{"id":2213,"title":"Forzon%20%E2%80%93%20100%25%20Data%20Driven%20Digital%20Marketing%20Agency","excerpt":"","featuredImage":false}};
 </script>
 <script type='text/javascript' src='wp-content\plugins\elementor\assets\js\frontend.min.js?ver=2.9.13'></script>
