--- a/index.htm
+++ b/index.htm
@@ -2014,11 +2014,12 @@ var wpformsElementorVars = {"recaptcha_type":"v2"};
 <script type='text/javascript' src='wp-content\plugins\wpforms-lite\assets\js\jquery.validate.min.js?ver=1.19.0'></script>
 <script type='text/javascript' src='wp-content\plugins\wpforms-lite\assets\js\mailcheck.min.js?ver=1.1.2'></script>
 
-<script type="text/javascript">
-    const images = document.getElementsByTagName('img');
-for (let i = 0; i < images.length; i++) {
-    images[i].addEventListener('contextmenu', event => event.preventDefault());
-}
+<script>
+(function($){
+  $(document).on('contextmenu', 'img', function() {
+      return false;
+  })
+})(jQuery);
 </script>
 
 	</body>
