--- a/social-media-banner/index.htm
+++ b/social-media-banner/index.htm
@@ -1180,7 +1180,7 @@ span.wpcf7-list-item {
 				</div>
 				<div class="elementor-element elementor-element-38f20e2 elementor-widget elementor-widget-text-editor" data-id="38f20e2" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-text-editor elementor-clearfix"><p>&amp; 1 Year Social Media Banners <span style="color: #000080;">JPEG, JPG,&amp; PNG</span> File Formats.</p></div>
+					<div class="elementor-text-editor elementor-clearfix"><p>&amp; 1 Year Social Media Banners <span style="color: #000080;">JPEG, JPG,&#038; PNG</span> File Formats.</p></div>
 				</div>
 				</div>
 						</div>
